<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:srcCompat="@drawable/header2" />

    <TextView
        android:id="@+id/my_order_H"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="-35dp"
        android:text="@string/my_order_H"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/sand" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_order_SAND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_order_SAND"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_order_S_O_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_S_O_D" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_S_Q" />

            <Button
                android:id="@+id/my_order_S_P_O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#15BDD2"
                android:text="@string/my_order_S_P_O"
                android:textColor="@color/my_order_E_1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/brick" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_weight="1"
            android:background="@drawable/background4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_order_BRICK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_order_BRICK"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_order_B_O_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_B_O_D" />

            <TextView
                android:id="@+id/my_order_B_Q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_B_Q" />

            <Button
                android:id="@+id/my_order_B_P_O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#15BDD2"
                android:text="@string/my_order_B_P_O"
                android:textColor="@color/my_order_E_2" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/cement" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_order_CEMENT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_order_CEMENT"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_order_C_O_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_C_O_D" />

            <TextView
                android:id="@+id/my_order_C_Q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_C_Q" />

            <Button
                android:id="@+id/my_order_C_P_O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#15BDD2"
                android:text="@string/my_order_C_P_O"
                android:textColor="@color/my_order_E_3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pile_of_pebbles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_order_PEBBLES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_order_PEBBLES"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_order_P_O_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_P_O_D" />

            <TextView
                android:id="@+id/my_order_P_Q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/my_order_P_Q" />

            <Button
                android:id="@+id/my_order_P_P_O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#15BDD2"
                android:text="@string/my_order_P_P_O"
                android:textColor="@color/my_order_E_4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="21dp"
            android:background="@drawable/futer"

            >

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/advertisement" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/notification" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/account" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
