<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D485C"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:srcCompat="@drawable/header2"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/my_profile_H"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="-35dp"
        android:text="@string/my_profile_H"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-310dp"
        app:srcCompat="@drawable/circles" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-220dp"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/my_profile_NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/my_profile_NAME"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/my_profile_EMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/my_profile_EMAIL"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/second_background"
        android:orientation="vertical"
        android:textAlignment="center">

        <Button
            android:id="@+id/my_profile_M_L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#15BDD2"
            android:text="@string/my_profile_M_L"
            android:textColor="@color/my_profile_M_L" />

        <Button
            android:id="@+id/my_profile_M_O"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#15BDD2"
            android:text="@string/my_profile_M_O"
            android:textColor="@color/my_profile_M_O" />

        <Button
            android:id="@+id/my_profile_M_P_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#15BDD2"
            android:text="@string/my_profile_M_P_D"
            android:textColor="@color/my_profile_M_P_D" />

        <Button
            android:id="@+id/my_profile_M_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#15BDD2"
            android:text="@string/my_profile_M_D"
            android:textColor="#000000" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/futer"

        >

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/advertisement" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/notification" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/account" />

    </LinearLayout>


</LinearLayout>

